--- a/.config
+++ b/.config
@@ -59,8 +59,8 @@ CONFIG_TARGET_mediatek_mt7981=y
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-fpga-spim-nand is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-fpga-emmc is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-fpga-sd is not set
-CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-360-t7=y
-# CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-360-t7-108M is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-360-t7 is not set
+CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-360-t7-108M=y
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_abt_asr3000 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_cetron_ct3003 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-clt-r30b1 is not set
@@ -87,7 +87,7 @@ CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="mediatek"
 CONFIG_TARGET_SUBTARGET="mt7981"
-CONFIG_TARGET_PROFILE="DEVICE_mt7981-360-t7"
+CONFIG_TARGET_PROFILE="DEVICE_mt7981-360-t7-108M"
 CONFIG_TARGET_ARCH_PACKAGES="aarch64_cortex-a53"
 CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53"
 CONFIG_CPU_TYPE="cortex-a53"
